# scatternotes.cli

./: 1708169161-KZXF.md  Cargo.toml  README.md  test.md
src/: 1707939356-KXZG.md  carlender.rs  clean.rs  cli.rs  code.rs  commands.rs  commit.rs  config.rs  generate.rs  main.rs  name.rs  note.rs  output.rs  person.rs  search.rs  tag.rs  todo.rs
src/commands/: carlender.rs  clean.rs  code.rs  commit.rs  generate.rs  list.rs  persons.rs  search.rs  todo.rs
src/note/: dto.rs  mod.rs  repository.rs  tag.rs
src/note/dto/: tag.rs  todo.rs
src/output/: tags.rs
src/tag/: config.rs
