[package]
name = "scatternotes"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.0", features = ["derive"] }
csv = "1.3.0"
eyre = "0.6.12"
itertools = "0.12.1"
nom = "7.1.3"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
termfmt = { git = "https://github.com/lukas412/termfmt" }

