[package]
name = "scatternotes"
version = "0.1.4"
edition = "2021"
description = "A cli application to manage unstructured notes."
license = "MIT"

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.0", features = ["derive"] }
eyre = "0.6.12"
itertools = "0.12.1"
nom = "7.1.3"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
termfmt = "0.2.1"
unicase = "2.7.0"
